--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing = "20">
       <tr>
-        <td><img src="C:\Users\Abdul Vahid K\Desktop\Vahid.png.png" alt="Abdul Vahid K Profile Pic"></td>
+        <td><img src="Vahid.png.png" alt="Abdul Vahid K Profile Pic"></td>
         <td><h1>Abdul Vahid K</h1>
             <p><em><strong>Chemist</strong> by<strong> Education</strong>, <strong>Software Engineer</strong> by <strong>Profession</strong> and <strong>Financial Analyst</strong> by both.</em></p>
             <p>I am a first generation college graduate with a Masters degree in Chemistry and aspiring CFA Charter holder. I am learning Javascript currently.</p></td>
